# ABE-SGC

./: AOTree.cpp  AOTree.h  CMakeLists.txt  HashChain.cpp  HashChain.h  KeyTree.cpp  KeyTree.h  LICENSE  MSPMatrix.cpp  MSPMatrix.h  README.md  TTree.cpp  TTree.h  config.h  main.cpp  random.cpp  random.h  relic_util.cpp  relic_util.h  secret_sharing.cpp  secret_sharing.h  serialize.cpp  serialize.h  util.cpp  util.h
abe_schemes/: cpabbe.cpp  cpabbe.h  cpabbe_s.cpp  cpabbe_s.h  cpabbe_switcher.cpp  cpabbe_switcher.h  cpabe.cpp  cpabe.h  cpabe_s.cpp  cpabe_s.h  cpabe_switcher.cpp  cpabe_switcher.h  fabeo_cpabe.cpp  fabeo_cpabe.h  fabeo_kpabe.cpp  fabeo_kpabe.h  fame_cpabe.cpp  fame_cpabe.h  fame_kpabe.cpp  fame_kpabe.h  fibe.cpp  fibe.h  fibe_large.cpp  fibe_large.h  fibe_large_s.cpp  fibe_large_s.h  fibe_s.cpp  fibe_s.h  kpabbe.cpp  kpabbe.h  kpabbe_s.cpp  kpabbe_s.h  kpabbe_switcher.cpp  kpabbe_switcher.h  kpabe.cpp  kpabe.h  kpabe_large.cpp  kpabe_large.h  kpabe_large_s.cpp  kpabe_large_s.h  (+4 more)
abe_sgc_schemes/: cpabbe_sgc.cpp  cpabbe_sgc.h  flat_table.cpp  flat_table.h  kpabbe_sgc.cpp  kpabbe_sgc.h  naive_cpabe.cpp  naive_cpabe.h  naive_kpabe.cpp  naive_kpabe.h
bfm/: espresso.h
cmake/Modules/: FindMBEDTLS.cmake  FindMINBOOL.cmake  FindRELIC.cmake
crypto_functions/: aes.cpp  aes.h  sha256.cpp  sha256.h
reference_sgc_schemes/: lkh.cpp  lkh.h  s2rp.cpp  s2rp.h  skdc.cpp  skdc.h
scripts/: install_relic_pc.sh
